# rom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LLMS.md  README.md  SECURITY.md  context7.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-bindings.yml
bindings/gom-node/: Cargo.toml  README.md  package.json
bindings/gom-node/native/: lib.rs
bindings/gom-node/scripts/: build-native.mjs  smoke.mjs  stage-prebuilds.mjs
bindings/gom-node/src/: index.d.ts  index.js  native.js  page.js  platform.js
bindings/gom-python/: Cargo.toml  README.md  pyproject.toml
bindings/gom-python/rust/: lib.rs
bindings/gom-python/scripts/: smoke.py
bindings/gom-python/src/rom/: __init__.py  page.py
crates/rom-core/: Cargo.toml
crates/rom-core/src/: engine.rs  error.rs  lib.rs
crates/rom-runtime/: Cargo.toml
crates/rom-runtime/examples/: fingerprintjs_report.rs
crates/rom-runtime/src/: bridge.rs  compat.rs  config.rs  error.rs  fingerprintjs.rs  lib.rs  runtime.rs  tests_adjacent_html.rs  tests_canvas.rs  tests_character_data.rs  tests_classlist.rs  tests_collections.rs  tests_comments.rs  tests_cookies.rs  tests_cors.rs  tests_css.rs  tests_dataset.rs  tests_document_surface.rs  tests_dom_mutations.rs  tests_dom_navigation.rs  tests_errors.rs  tests_events.rs  tests_eventsource.rs  tests_fetch_semantics.rs  tests_file_reader.rs  tests_fragments.rs  tests_history.rs  tests_innerhtml.rs  tests_layout_observers.rs  tests_lifecycle.rs  tests_messaging.rs  tests_mutation_observer.rs  tests_navigator.rs  tests_node_equality.rs  tests_node_helpers.rs  tests_normalize.rs  tests_parsing.rs  tests_performance.rs  tests_raw_risk_surface.rs  tests_react_dom_surface.rs  (+10 more)
crates/rom-runtime/src/tests_eventsource/: parsing.rs
crates/rom-runtime/src/tests_webcrypto/: advanced.rs  jwk.rs  lengths.rs  params.rs  wrapping.rs
crates/rom-runtime/tests/: bridge_cli.rs
crates/rom-webapi/: Cargo.toml
crates/rom-webapi/src/: bootstrap.rs  config.rs  host_crypto.rs  host_fetch.rs  host_url.rs  host_websocket.rs  lib.rs
crates/rom-webapi/src/host_crypto/: aes.rs  core.rs  gcm.rs  ops.rs  types.rs
crates/rom-webapi/src/host_fetch/: client.rs  proxy.rs  socks.rs  tls.rs
crates/rom-webapi/src/js/: bootstrap_body.js  bootstrap_canvas.js  bootstrap_cookie.js  bootstrap_crypto.js  bootstrap_crypto_params.js  bootstrap_dom.js  bootstrap_eventsource.js  bootstrap_fetch.js  bootstrap_globals.js  bootstrap_messaging.js  bootstrap_navigator.js  bootstrap_observers.js  bootstrap_parser.js  bootstrap_prelude.js  bootstrap_textcodecs.js  bootstrap_url.js  bootstrap_urlpattern.js  bootstrap_viewport.js  bootstrap_webgl.js  bootstrap_websocket.js
docs/: architecture.md  fingerprint-harness.md
fixtures/fingerprintjs/: browser-chromium-harness.json  rom-default-harness.json
tools/: fingerprintjs-browser-reference.mjs
