[workspace]
members = [
    "crates/rom-core",
    "crates/rom-webapi",
    "crates/rom-runtime",
]
default-members = [
    "crates/rom-core",
    "crates/rom-webapi",
    "crates/rom-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hkdf = "0.12.4"
hmac = "0.12.1"
getrandom = "0.3.3"
pbkdf2 = "0.12.2"
rcgen = "0.14.7"
rom-core = { path = "crates/rom-core" }
rom-runtime = { path = "crates/rom-runtime" }
rom-webapi = { path = "crates/rom-webapi" }
rquickjs = "0.11.0"
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
typenum = "1.19.0"
ureq = "3.2.0"
url = "2.5.7"
