[workspace]
members = [
    "crates/rom-core",
    "crates/rom-webapi",
    "crates/rom-runtime",
]
default-members = [
    "crates/rom-core",
    "crates/rom-webapi",
    "crates/rom-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/Rxflex/rom"
license = "MIT"
repository = "https://github.com/Rxflex/rom"
version = "0.1.0"

[workspace.dependencies]
aes = "0.8.4"
aes-kw = "0.2.1"
aes-gcm = "0.10.3"
base64 = "0.22.1"
boring = "5.0.2"
cbc = "0.1.2"
hkdf = "0.12.4"
hmac = "0.12.1"
getrandom = "0.3.3"
httparse = "1.10.1"
pbkdf2 = "0.12.2"
rcgen = "0.14.7"
rom-core = { path = "crates/rom-core" }
rom-runtime = { path = "crates/rom-runtime" }
rom-webapi = { path = "crates/rom-webapi" }
rquickjs = "0.11.0"
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
typenum = "1.19.0"
ureq = "3.2.0"
url = "2.5.7"
