[package]
name = "rom-node-native"
description = "Native napi-rs bridge for the ROM Node.js bindings"
version = "0.0.20"
edition = "2024"
homepage = "https://github.com/Rxflex/rom"
license = "MIT"
repository = "https://github.com/Rxflex/rom"

[lib]
name = "rom_node_native"
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = "3"
napi-derive = "3"
rom-runtime = { path = "../../crates/rom-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[workspace]
