[package]
name = "rom-python-native"
description = "Native PyO3 bridge for the ROM Python bindings"
version = "0.0.6"
edition = "2024"
homepage = "https://github.com/Rxflex/rom"
license = "MIT"
repository = "https://github.com/Rxflex/rom"

[lib]
name = "_native"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
rom-runtime = { path = "../../crates/rom-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
