[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rom-runtime"
version = "0.1.0"
description = "Python wrapper for the ROM browser-like runtime"
readme = "../../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rxflex" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
