[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rom-runtime"
version = "0.1.0"
description = "Python wrapper for the ROM browser-like runtime"
readme = "../../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rxflex" }]

[tool.maturin]
python-source = "src"
module-name = "rom._native"
