[package]
name = "rom-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rom-core.workspace = true
rom-webapi.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
