[package]
name = "rom-runtime"
description = "High-level browser-like runtime assembly for ROM"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rom-core.workspace = true
rom-webapi.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tungstenite.workspace = true
url.workspace = true
