[package]
name = "rom-webapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
getrandom.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tungstenite.workspace = true
typenum.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
