[package]
name = "rom-webapi"
description = "Browser-facing Web API layer for the ROM runtime"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
aes-kw.workspace = true
aes-gcm.workspace = true
base64.workspace = true
boring.workspace = true
cbc.workspace = true
getrandom.workspace = true
httparse.workspace = true
hkdf.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tungstenite.workspace = true
typenum.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
